@@ -16,7 +16,7 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > #### Simple integrity tests of the system datasets
-> 
+>
 > options(useFancyQuotes=FALSE)
 > env <- as.environment("package:datasets")
 > d <- ls(env) # don't want .names
@@ -32,7 +32,7 @@ Type 'q()' to quit R.
  Time-Series [1:150] from 1 to 150: 200 200 199 199 199 ...
 
 ** structure of dataset BJsales.lead
- Time-Series [1:150] from 1 to 150: 10.01 10.07 10.32  9.75 10.33 ...
+ Time-Series [1:150] from 1 to 150: 10.01 10.07 10.32 9.75 10.33 ...
 
 ** structure of dataset BOD
 'data.frame':	6 obs. of  2 variables:
@@ -48,9 +48,9 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	84 ob
  $ conc     : num  95 175 250 350 500 675 1000 95 175 250 ...
  $ uptake   : num  16 30.4 34.8 37.2 35.3 39.2 39.7 13.6 27.3 37.1 ...
  - attr(*, "formula")=Class 'formula' length 3 uptake ~ conc | Plant
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "outer")=Class 'formula' length 2 ~Treatment * Type
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "Ambient carbon dioxide concentration"
   ..$ y: chr "CO2 uptake rate"
@@ -65,9 +65,9 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	578 o
  $ Chick : Ord.factor w/ 50 levels "18"<"16"<"15"<..: 15 15 15 15 15 15 15 15 15 15 ...
  $ Diet  : Factor w/ 4 levels "1","2","3","4": 1 1 1 1 1 1 1 1 1 1 ...
  - attr(*, "formula")=Class 'formula' length 3 weight ~ Time | Chick
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "outer")=Class 'formula' length 2 ~Diet
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "Time"
   ..$ y: chr "Body weight"
@@ -81,7 +81,7 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	176 o
  $ conc   : num  0.0488 0.0488 0.1953 0.1953 0.3906 ...
  $ density: num  0.017 0.018 0.121 0.124 0.206 0.215 0.377 0.374 0.614 0.609 ...
  - attr(*, "formula")=Class 'formula' length 3 density ~ conc | Run
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "DNase concentration"
   ..$ y: chr "Optical density"
@@ -93,7 +93,7 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	176 o
  - attr(*, "dimnames")=List of 2
   ..$ : NULL
   ..$ : chr [1:4] "DAX" "SMI" "CAC" "FTSE"
- - attr(*, "tsp")= num [1:3] 1991 1999  260
+ - attr(*, "tsp")= num [1:3] 1991 1999 260
  - attr(*, "class")= chr [1:2] "mts" "ts"
 
 ** structure of dataset Formaldehyde
@@ -132,7 +132,7 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	66 ob
  $ time   : num  0.25 0.5 0.75 1 1.25 2 3 4 5 6 ...
  $ conc   : num  1.5 0.94 0.78 0.48 0.37 0.19 0.12 0.11 0.08 0.07 ...
  - attr(*, "formula")=Class 'formula' length 3 conc ~ time | Subject
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "Time since drug administration"
   ..$ y: chr "Indomethicin concentration"
@@ -153,19 +153,19 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	66 ob
 
 ** structure of dataset LifeCycleSavings
 'data.frame':	50 obs. of  5 variables:
- $ sr   : num  11.43 12.07 13.17  5.75 12.88 ...
+ $ sr   : num  11.43 12.07 13.17 5.75 12.88 ...
  $ pop15: num  29.4 23.3 23.8 41.9 42.2 ...
  $ pop75: num  2.87 4.41 4.43 1.67 0.83 2.85 1.34 0.67 1.06 1.14 ...
- $ dpi  : num  2330 1508 2108  189  728 ...
+ $ dpi  : num  2330 1508 2108 189 728 ...
  $ ddpi : num  2.87 3.93 3.82 0.22 4.56 2.43 2.67 6.51 3.08 2.8 ...
 
 ** structure of dataset Loblolly
 Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	84 obs. of  3 variables:
- $ height: num   4.51 10.89 28.72 41.74 52.70 ...
+ $ height: num  4.51 10.89 28.72 41.74 52.7 ...
  $ age   : num  3 5 10 15 20 25 3 5 10 15 ...
  $ Seed  : Ord.factor w/ 14 levels "329"<"327"<"325"<..: 10 10 10 10 10 10 13 13 13 13 ...
  - attr(*, "formula")=Class 'formula' length 3 height ~ age | Seed
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "Age of tree"
   ..$ y: chr "Height of tree"
@@ -179,10 +179,10 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	84 ob
 ** structure of dataset Orange
 Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	35 obs. of  3 variables:
  $ Tree         : Ord.factor w/ 5 levels "3"<"1"<"5"<"2"<..: 2 2 2 2 2 2 2 4 4 4 ...
- $ age          : num   118  484  664 1004 1231 ...
+ $ age          : num  118 484 664 1004 1231 ...
  $ circumference: num  30 58 87 115 120 142 145 33 69 111 ...
  - attr(*, "formula")=Class 'formula' length 3 circumference ~ age | Tree
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "Time since December 31, 1968"
   ..$ y: chr "Trunk circumference"
@@ -214,7 +214,7 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	35 ob
  - attr(*, "dimnames")=List of 2
   ..$ : NULL
   ..$ : chr [1:8] "DriversKilled" "drivers" "front" "rear" ...
- - attr(*, "tsp")= num [1:3] 1969 1985   12
+ - attr(*, "tsp")= num [1:3] 1969 1985 12
  - attr(*, "class")= chr [1:2] "mts" "ts"
 
 ** structure of dataset Theoph
@@ -222,10 +222,10 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	132 o
  $ Subject: Ord.factor w/ 12 levels "6"<"7"<"8"<"11"<..: 11 11 11 11 11 11 11 11 11 11 ...
  $ Wt     : num  79.6 79.6 79.6 79.6 79.6 79.6 79.6 79.6 79.6 79.6 ...
  $ Dose   : num  4.02 4.02 4.02 4.02 4.02 4.02 4.02 4.02 4.02 4.02 ...
- $ Time   : num  0.00 0.25 0.57 1.12 2.02 ...
+ $ Time   : num  0 0.25 0.57 1.12 2.02 ...
  $ conc   : num  0.74 2.84 6.57 10.5 9.66 8.58 8.36 7.47 6.89 5.94 ...
  - attr(*, "formula")=Class 'formula' length 3 conc ~ Time | Subject
-  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_EmptyEnv>
  - attr(*, "labels")=List of 2
   ..$ x: chr "Time since drug administration"
   ..$ y: chr "Theophylline concentration in serum"
@@ -258,10 +258,10 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	132 o
  Time-Series [1:192] from 1969 to 1985: 1687 1508 1507 1385 1632 ...
 
 ** structure of dataset UKgas
- Time-Series [1:108] from 1960 to 1987: 160.1 129.7  84.8 120.1 160.1 ...
+ Time-Series [1:108] from 1960 to 1987: 160.1 129.7 84.8 120.1 160.1 ...
 
 ** structure of dataset USAccDeaths
- Time-Series [1:72] from 1973 to 1979:  9007  8106  8928  9137 10017 ...
+ Time-Series [1:72] from 1973 to 1979: 9007 8106 8928 9137 10017 ...
 
 ** structure of dataset USArrests
 'data.frame':	50 obs. of  4 variables:
@@ -308,7 +308,7 @@ Classes 'nfnGroupedData', 'nfGroupedData', 'groupedData' and 'data.frame':	132 o
 
 ** structure of dataset ability.cov
 List of 3
- $ cov   : num [1:6, 1:6] 24.64  5.99 33.52  6.02 20.75 ...
+ $ cov   : num [1:6, 1:6] 24.64 5.99 33.52 6.02 20.75 ...
   ..- attr(*, "dimnames")=List of 2
   .. ..$ : chr [1:6] "general" "picture" "blocks" "maze" ...
   .. ..$ : chr [1:6] "general" "picture" "blocks" "maze" ...
@@ -316,7 +316,7 @@ List of 3
  $ n.obs : num 112
 
 ** structure of dataset airmiles
- Time-Series [1:24] from 1937 to 1960:  412  480  683 1052 1385 ...
+ Time-Series [1:24] from 1937 to 1960: 412 480 683 1052 1385 ...
 
 ** structure of dataset airquality
 'data.frame':	153 obs. of  6 variables:
@@ -335,7 +335,7 @@ List of 3
  $ x4: num  8 8 8 8 8 8 8 19 8 8 ...
  $ y1: num  8.04 6.95 7.58 8.81 8.33 ...
  $ y2: num  9.14 8.14 8.74 8.77 9.26 8.1 6.13 3.1 9.13 7.26 ...
- $ y3: num   7.46  6.77 12.74  7.11  7.81 ...
+ $ y3: num  7.46 6.77 12.74 7.11 7.81 ...
  $ y4: num  6.58 5.76 7.71 8.84 8.47 7.04 5.25 12.5 5.56 7.91 ...
 
 ** structure of dataset attenu
@@ -404,11 +404,11 @@ List of 3
  $ ncontrols: num  40 10 6 5 27 7 4 7 2 1 ...
 
 ** structure of dataset euro
- Named num [1:11]  13.76  40.34   1.96 166.39   5.95 ...
+ Named num [1:11] 13.76 40.34 1.96 166.39 5.95 ...
  - attr(*, "names")= chr [1:11] "ATS" "BEF" "DEM" "ESP" ...
 
 ** structure of dataset euro.cross
- num [1:11, 1:11] 1.0000 0.3411 7.0355 0.0827 2.3143 ...
+ num [1:11, 1:11] 1 0.3411 7.0355 0.0827 2.3143 ...
  - attr(*, "dimnames")=List of 2
   ..$ : chr [1:11] "ATS" "BEF" "DEM" "ESP" ...
   ..$ : chr [1:11] "ATS" "BEF" "DEM" "ESP" ...
@@ -420,7 +420,7 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
 
 ** structure of dataset faithful
 'data.frame':	272 obs. of  2 variables:
- $ eruptions: num  3.60 1.80 3.33 2.28 4.53 ...
+ $ eruptions: num  3.6 1.8 3.33 2.28 4.53 ...
  $ waiting  : num  79 54 74 62 85 55 88 85 51 85 ...
 
 ** structure of dataset fdeaths
@@ -429,13 +429,13 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
 ** structure of dataset freeny
 'data.frame':	39 obs. of  5 variables:
  $ y                    : Time-Series  from 1962 to 1972: 8.79 8.79 8.81 8.81 8.91 ...
- $ lag.quarterly.revenue: num  8.80 8.79 8.79 8.81 8.81 ...
- $ price.index          : num  4.71 4.70 4.69 4.69 4.64 ...
+ $ lag.quarterly.revenue: num  8.8 8.79 8.79 8.81 8.81 ...
+ $ price.index          : num  4.71 4.7 4.69 4.69 4.64 ...
  $ income.level         : num  5.82 5.83 5.83 5.84 5.85 ...
- $ market.potential     : num  13.0 13.0 13.0 13.0 13.0 ...
+ $ market.potential     : num  13 13 13 13 13 ...
 
 ** structure of dataset freeny.x
- num [1:39, 1:4] 8.80 8.79 8.79 8.81 8.81 ...
+ num [1:39, 1:4] 8.8 8.79 8.79 8.81 8.81 ...
  - attr(*, "dimnames")=List of 2
   ..$ : NULL
   ..$ : chr [1:4] "lag quarterly revenue" "price index" "income level" "market potential"
@@ -470,7 +470,7 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
   ..$ : chr [1:3] "Setosa" "Versicolor" "Virginica"
 
 ** structure of dataset islands
- Named num [1:48] 11506  5500 16988  2968    16 ...
+ Named num [1:48] 11506 5500 16988 2968 16 ...
  - attr(*, "names")= chr [1:48] "Africa" "Antarctica" "Asia" "Australia" ...
 
 ** structure of dataset ldeaths
@@ -481,7 +481,7 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
 
 ** structure of dataset longley
 'data.frame':	16 obs. of  7 variables:
- $ GNP.deflator: num  83.0 88.5 88.2 89.5 96.2 ...
+ $ GNP.deflator: num  83 88.5 88.2 89.5 96.2 ...
  $ GNP         : num  234 259 258 285 329 ...
  $ Unemployed  : num  236 232 368 335 210 ...
  $ Armed.Forces: num  159 146 162 165 310 ...
@@ -490,7 +490,7 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
  $ Employed    : num  60.3 61.1 60.2 61.2 63.2 ...
 
 ** structure of dataset lynx
- Time-Series [1:114] from 1821 to 1934:  269  321  585  871 1475 ...
+ Time-Series [1:114] from 1821 to 1934: 269 321 585 871 1475 ...
 
 ** structure of dataset mdeaths
  Time-Series [1:72] from 1974 to 1980: 2134 1863 1877 1877 1492 ...
@@ -509,7 +509,7 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
  $ hp  : num  110 110 93 110 175 105 245 62 95 123 ...
  $ drat: num  3.9 3.9 3.85 3.08 3.15 2.76 3.21 3.69 3.92 3.92 ...
  $ wt  : num  2.62 2.88 2.32 3.21 3.44 ...
- $ qsec: num  16.5 17.0 18.6 19.4 17.0 ...
+ $ qsec: num  16.5 17 18.6 19.4 17 ...
  $ vs  : num  0 0 1 1 0 1 0 1 1 1 ...
  $ am  : num  1 1 1 0 0 0 0 0 0 0 ...
  $ gear: num  4 4 4 3 3 3 3 4 4 4 ...
@@ -531,11 +531,11 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
 ** structure of dataset pressure
 'data.frame':	19 obs. of  2 variables:
  $ temperature: num  0 20 40 60 80 100 120 140 160 180 ...
- $ pressure   : num  2e-04 0.0012 0.006 0.03 0.09 0.27 0.75 1.85 4.2 8.8 ...
+ $ pressure   : num  0.0002 0.0012 0.006 0.03 0.09 0.27 0.75 1.85 4.2 8.8 ...
 
 ** structure of dataset quakes
 'data.frame':	1000 obs. of  5 variables:
- $ lat     : num  -20.4 -20.6 -26.0 -18.0 -20.4 ...
+ $ lat     : num  -20.4 -20.6 -26 -18 -20.4 ...
  $ long    : num  182 181 184 182 182 ...
  $ depth   : int  562 650 42 626 649 195 82 194 211 622 ...
  $ mag     : num  4.8 4.2 5.4 4.1 4 4 4.8 4.4 4.7 4.3 ...
@@ -543,7 +543,7 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
 
 ** structure of dataset randu
 'data.frame':	400 obs. of  3 variables:
- $ x: num  0.000031 0.044495 0.822440 0.322291 0.393595 ...
+ $ x: num  0.000031 0.044495 0.82244 0.322291 0.393595 ...
  $ y: num  0.000183 0.155732 0.873416 0.648545 0.826873 ...
  $ z: num  0.000824 0.533939 0.838542 0.990648 0.418881 ...
 
@@ -582,11 +582,11 @@ Class 'dist'  atomic [1:210] 3313 2963 3175 3339 2762 ...
  chr [1:50] "AL" "AK" "AZ" "AR" "CA" "CO" "CT" "DE" "FL" ...
 
 ** structure of dataset state.area
- num [1:50]  51609 589757 113909  53104 158693 ...
+ num [1:50] 51609 589757 113909 53104 158693 ...
 
 ** structure of dataset state.center
 List of 2
- $ x: num [1:50]  -86.8 -127.2 -111.6  -92.3 -119.8 ...
+ $ x: num [1:50] -86.8 -127.2 -111.6 -92.3 -119.8 ...
  $ y: num [1:50] 32.6 49.2 34.2 34.7 36.5 ...
 
 ** structure of dataset state.division
@@ -599,7 +599,7 @@ List of 2
  Factor w/ 4 levels "Northeast","South",..: 2 4 4 2 4 4 1 2 2 2 ...
 
 ** structure of dataset state.x77
- num [1:50, 1:8]  3615   365  2212  2110 21198 ...
+ num [1:50, 1:8] 3615 365 2212 2110 21198 ...
  - attr(*, "dimnames")=List of 2
   ..$ : chr [1:50] "Alabama" "Alaska" "Arizona" "Arkansas" ...
   ..$ : chr [1:8] "Population" "Income" "Illiteracy" "Life Exp" ...
@@ -619,7 +619,7 @@ List of 2
  $ Agriculture     : num  17 45.1 39.7 36.5 43.5 35.3 70.2 67.8 53.3 45.2 ...
  $ Examination     : int  15 6 5 12 17 9 16 14 12 16 ...
  $ Education       : int  12 9 5 7 15 7 7 8 7 13 ...
- $ Catholic        : num   9.96 84.84 93.40 33.77  5.16 ...
+ $ Catholic        : num  9.96 84.84 93.4 33.77 5.16 ...
  $ Infant.Mortality: num  22.2 22.2 20.2 20.3 20.6 26.6 23.6 24.9 21 24.4 ...
 
 ** structure of dataset treering
@@ -647,4 +647,4 @@ List of 2
 'data.frame':	15 obs. of  2 variables:
  $ height: num  58 59 60 61 62 63 64 65 66 67 ...
  $ weight: num  115 117 120 123 126 129 132 135 139 142 ...
-> 
+>
